...
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="Potencia"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Fibonacci"
        android:layout_width="365dp"
        android:layout_height="82dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="696dp"
        android:backgroundTint="@color/material_dynamic_primary70"
        android:text="Secuencia de fibonacci"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/Caja1"
...
